Update memcache module dependencies and add Acquia patch.

--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -15,7 +15,7 @@
         "drupal/core": "^8.6.0",
         "drupal/devel": "^2.0.0",
         "drupal/features": "^3.8.0",
-        "drupal/memcache": "2.0-alpha7",
+        "drupal/memcache": "^2.0",
         "drupal/qa_accounts": "^1.0.0-alpha1",
         "drupal/seckit": "^1.0.0-alpha2",
         "drupal/shield": "^1.2.0"
@@ -73,7 +73,11 @@
         "patchLevel": {
             "drupal/core": "-p2"
         },
-        "patches": []
+        "patches": {
+            "drupal/memcache": {
+                "12987574 - >1M data writes incompatible with memcached (memcached -I 32M -m32): #435694": "https://www.drupal.org/files/issues/2019-02-26/435694-118-d8-memcache-large-items.patch"
+            }
+        }
     },
     "autoload": {
         "psr-4": {
