--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,7 @@ install:
 before_script: ../orca/bin/travis/before_script.sh
 
 script:
+  - ./bin/travis/orca-fix.sh
   - ../orca/bin/travis/script.sh
   - ./bin/travis/script.sh
 
