Fixes #3761 - Set Composer PHP Platform to 7.2.

--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -24,7 +24,10 @@
         "acquia/blt-require-dev": "^10.0.0-alpha1"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "7.2"
+        }
     },
     "extra": {
         "composer-exit-on-patch-failure": true,
