--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -24,10 +24,10 @@
         "acquia/blt-require-dev": "^10.0.0-alpha1"
     },
     "config": {
-        "sort-packages": true,
         "platform": {
             "php": "7.2"
-        }
+        },
+        "sort-packages": true
     },
     "extra": {
         "composer-exit-on-patch-failure": true,
