--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -24,6 +24,9 @@
         "acquia/blt-require-dev": "^10.0.0-alpha1"
     },
     "config": {
+        "platform": {
+            "php": "7.2"
+        },
         "sort-packages": true
     },
     "extra": {
