--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal-composer/drupal-scaffold": "^2.5.4",
         "drupal/coder": "^8.3.1",
         "drupal/core": "^8.5.0",
+        "drupol/phposinfo": "^1.6",
         "drush/drush": "^9.5.0",
         "grasmash/drupal-security-warning": "^1.0.0",
         "grasmash/yaml-cli": "^1.0.0",
@@ -43,7 +44,6 @@
         "symfony/console": "^3.4.0",
         "symfony/twig-bridge": "^3.3",
         "symfony/yaml": "^3.2.8",
-        "tivie/php-os-detector": "^1.0",
         "typhonius/acquia-php-sdk-v2": "^1.0.4",
         "zaporylie/composer-drupal-optimizations": "^1.0"
     },
