--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "symfony/yaml": "^3.2.8",
         "tivie/php-os-detector": "^1.0",
         "typhonius/acquia-php-sdk-v2": "^1.0.4",
+        "vaimo/binary-chromedriver": "^5.0",
         "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "conflict": {
@@ -75,6 +76,9 @@
     "extra": {
         "branch-alias": {
             "10.x-dev": "10.0.x-dev"
+        },
+        "chromedriver": {
+            "version": "76.0.3809.68"
         },
         "class": "Acquia\\Blt\\Composer\\Plugin",
         "composer-exit-on-patch-failure": true,
