--- a/scripts/pipelines/acquia-pipelines.yml
+++ b/scripts/pipelines/acquia-pipelines.yml
@@ -1,4 +1,4 @@
-version: 1.1.0
+version: 1.2.0
 services:
   - mysql
   - php:
@@ -46,6 +46,9 @@ events:
       - deploy:
           script:
             - pipelines-deploy
+            # Uncomment this line and replace DB_NAME to sync a db on deploys.
+            # @see https://docs.acquia.com/acquia-cloud/develop/pipelines/databases/
+            # - pipelines-sync-dbs DB_NAME
   pr-merged:
     steps:
       - deploy:
