--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -21,8 +21,7 @@
         "drupal/shield": "^1.2.0"
     },
     "require-dev": {
-        "acquia/blt-require-dev": "^10.0.0-alpha1",
-        "behat/mink-selenium2-driver": "dev-master#a38512485e905738321f793b3acd3e7411a85101 as 1.3.x-dev"
+        "acquia/blt-require-dev": "^10.0.0-alpha1"
     },
     "config": {
         "platform": {
