DT-586: Fixes #3616: Support syncing of private files.

--- a/config/build.yml
+++ b/config/build.yml
@@ -138,6 +138,7 @@ sync:
   # Set this value to 'true' or pass -D sync.files=true
   # to override this behavior.
   files: false
+  private-files: false
   # Paths to exclude during file syncing operations.
   exclude-paths:
     - styles
