--- a/subtree-splits/blt-project/blt/blt.yml
+++ b/subtree-splits/blt-project/blt/blt.yml
@@ -1,6 +1,14 @@
 # This file contains your BLT configuration. For a list of all available
 # properties with current values run `blt config:dump`. Default values come
 # from vendor/acquia/blt/config/build.yml.
+#
+# These values can be overridden at the command line using `--define`, i.e.:
+# blt setup --define project.profile.name=minimal
+#
+# However, when tokens in this file are expanded, they will not use any such
+# command-line overrides. For instance, `blt sync --define drush.aliases.local`
+# will not modify `drush.default_alias`, even though `drush.default_alias` is
+# set to `drush.aliases.local` by default.
 project:
   # Everyone: This will determine the the directory name of the new repository.
   # Dev Desktop users: this should match your local site name.
