Stop managing node altogether.

--- a/scripts/pipelines/acquia-pipelines.yml
+++ b/scripts/pipelines/acquia-pipelines.yml
@@ -18,7 +18,7 @@ events:
               - composer validate --no-check-all --ansi
               - composer install --ansi
               - source ${BLT_DIR}/scripts/pipelines/setup_env
-              # - nvm install v6.9.1
+              # - nvm install v6.9.1 --latest-npm
               # - npm install --global yarn
         - validate:
             type: script
