--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "symfony/console": "^3.4.0",
         "symfony/twig-bridge": "^3.3",
         "symfony/yaml": "^3.2.8",
-        "zaporylie/composer-drupal-optimizations": "^1.0"
+        "zaporylie/composer-drupal-optimizations": "^1.0",
+        "zumba/amplitude-php": "^1.0"
     },
     "conflict": {
         "drupal/core": "7.*",
