DT-587: Fixes #3564: Simulate deploys on TravisCI.

--- a/scripts/travis/.travis.yml
+++ b/scripts/travis/.travis.yml
@@ -48,6 +48,7 @@ script:
   # Uncomment these lines to test database updates using live content.
   # - blt drupal:sync:default:site
   - source ${BLT_DIR}/scripts/travis/run_tests
+  - source ${BLT_DIR}/scripts/travis/simulate_deploy
 
 deploy:
    - provider: script
