--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/common": "^2.5",
         "doctrine/inflector": "~1.1.0",
-        "drupal-composer/drupal-scaffold": "^2.5.4",
         "drupal/coder": "^8.3.1",
-        "drupal/core": "^8.5.0",
+        "drupal/core-composer-scaffold": "^8.8",
+        "drupal/core-recommended": "^8.8",
         "drupol/phposinfo": "^1.6",
-        "drush/drush": "^9.5.0",
+        "drush/drush": "^9.5.0 || ^10.0.1",
         "grasmash/drupal-security-warning": "^1.0.0",
         "grasmash/yaml-cli": "^1.0.0",
         "grasmash/yaml-expander": "^1.2.0",
@@ -54,11 +54,11 @@
     "require-dev": {
         "acquia/coding-standards": "^0.4.0",
         "composer/composer": "^1.6.4",
+        "drupal/core-dev": "^8.8",
         "knplabs/github-api": "^2.6",
         "php-http/guzzle6-adapter": "^1.1",
         "phpunit/phpunit": "^4.8 || ^6.5",
-        "squizlabs/php_codesniffer": "^3.0.1",
-        "webflo/drupal-core-require-dev": "^8.6.0"
+        "squizlabs/php_codesniffer": "^3.0.1"
     },
     "suggest": {
         "davereid/drush-acquia-hook-invoke": "dev-master",
