--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/common": "^2.5",
-        "doctrine/inflector": "~1.1.0",
+        "doctrine/inflector": "^1.2.0",
         "drupal/coder": "^8.3.1",
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-recommended": "^8.8",
