--- a/composer.json
+++ b/composer.json
@@ -78,6 +78,13 @@
         },
         "class": "Acquia\\Blt\\Composer\\Plugin",
         "composer-exit-on-patch-failure": true,
+        "drupal-scaffold": {
+            "allowed-packages": [],
+            "file-mapping": {
+                "[project-root]/.editorconfig": false,
+                "[project-root]/.gitattributes": false
+            }
+        },
         "installer-paths": {
             "vendor/drupal/core": [
                 "type:drupal-core"
