Allow to set based on configuration, default to false for BC.

--- a/config/build.yml
+++ b/config/build.yml
@@ -24,6 +24,8 @@ blt:
     example-local: ${repo.root}/blt/example.local.blt.yml
     schema-version: ${repo.root}/blt/.schema_version
   command-cache-dir: ${blt.root}/cache/commands
+  alias:
+    auto-install: false
 
 composer:
   bin: ${repo.root}/${bin.path}
