--- a/config/build.yml
+++ b/config/build.yml
@@ -223,6 +223,7 @@ tests:
     browsertest-output-directory: 'browser_output'
     apache-run-group: 'www-data'
     apache-run-user: 'www-data'
+    chrome-args: '--disable-gpu --headless --no-sandbox'
     # mink-driver-args: ''
     mink-driver-args-webdriver: '["chrome", {"browserName":"chrome","chromeOptions":{"args":["--disable-gpu","--headless","--no-sandbox"]}}, "http://localhost:9515"]'
     # mink-driver-class: 'Drupal\FunctionalJavascriptTests\DrupalSelenium2Driver'
