--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -9,6 +9,7 @@
         "acquia/drupal-spec-tool": "*",
         "acquia/lightning": "^4.0.0",
         "acquia/memcache-settings": "*",
+        "drupal-composer/drupal-scaffold": "^2.5.4",
         "drupal/acquia_connector": "^1.5.0",
         "drupal/acquia_purge": "^1.0-beta3",
         "drupal/cog": "^1.0.0",
