--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
   global:
     # ORCA configuration.
     - ORCA_SUT_NAME=acquia/blt
-    - ORCA_SUT_BRANCH=10.x
+    - ORCA_SUT_BRANCH=11.x
     - ORCA_VERSION=master
     # Custom configuration.
     - COMPOSER_BIN=$TRAVIS_BUILD_DIR/vendor/bin
@@ -58,6 +58,7 @@ before_install:
   - composer config --global repositories.blt path /tmp/blt-project
   # Install ORCA.
   - git clone --branch ${ORCA_VERSION} --depth 1 https://github.com/acquia/orca.git ../orca
+  - curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/53.patch | git -C ../orca apply
   - ../orca/bin/travis/before_install.sh
 
 install:
