--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -7,14 +7,13 @@
         "php": ">=7.1",
         "acquia/blt": "11.x-dev",
         "acquia/drupal-spec-tool": "*",
-        "acquia/lightning": "^4.0.0",
         "acquia/memcache-settings": "*",
-        "drupal-composer/drupal-scaffold": "^2.5.4",
         "drupal/acquia_connector": "^1.5.0",
         "drupal/acquia_purge": "^1.0-beta3",
         "drupal/cog": "^1.0.0",
         "drupal/config_split": "^1.0.0",
-        "drupal/core": "^8.6.0",
+        "drupal/core-composer-scaffold": "^8.8",
+        "drupal/core": "^8.8.0",
         "drupal/devel": "^2.0.0",
         "drupal/features": "^3.8.0",
         "drupal/qa_accounts": "^1.0.0-alpha1",
@@ -32,10 +31,12 @@
     },
     "extra": {
         "composer-exit-on-patch-failure": true,
-        "drupal-scaffold": {
-            "initial": {
-                "sites/default/default.services.yml": "sites/default/services.yml",
-                "sites/default/default.settings.php": "sites/default/settings.php"
+        "composer-scaffold": {
+            "locations": {
+                "web-root": "./docroot"
+            },
+            "allowed-packages": {
+                "drupal/core": "*"
             }
         },
         "enable-patching": true,
