--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 ---
 language: php
 
+os: linux
+
+version: ~> 1.0
+
 php: "7.2"
 
 addons:
@@ -11,7 +15,7 @@ cache:
     - "$HOME/.composer/cache"
     - "$HOME/.drush/cache"
     - "$HOME/.rvm"
-    - "$TMPDIR/phpstan/cache"
+    - "${TMPDIR:-/tmp}/phpstan/cache"
 
 services:
   - mysql
@@ -21,14 +25,14 @@ env:
     # ORCA configuration.
     - ORCA_SUT_NAME=acquia/blt
     - ORCA_SUT_BRANCH=11.x
-    - ORCA_VERSION=master
+    - ORCA_VERSION=dev-master
     # Custom configuration.
     - COMPOSER_BIN=$TRAVIS_BUILD_DIR/vendor/bin
     - BLT_DIR=$TRAVIS_BUILD_DIR
     - DRUPAL_CORE_HEAD=8.8.x-dev
     - BLT_PRINT_COMMAND_OUTPUT=0
 
-matrix:
+jobs:
   fast_finish: true
   include:
     # Standard ORCA jobs.
@@ -57,6 +61,7 @@ before_install:
   - cp -r subtree-splits/blt-project /tmp/
   - composer config --global repositories.blt path /tmp/blt-project
   # Install ORCA.
+  # TODO: Convert to composer create-project after we remove patch.
   - git clone --branch ${ORCA_VERSION} --depth 1 https://github.com/acquia/orca.git ../orca
   - curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/53.patch | git -C ../orca apply
   - ../orca/bin/travis/before_install.sh
