--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.1",
         "acquia/blt": "11.x-dev",
         "acquia/drupal-spec-tool": "*",
+        "acquia/lightning": "4.x-dev",
         "acquia/memcache-settings": "*",
         "drupal/acquia_connector": "^1.5.0",
         "drupal/acquia_purge": "^1.0-beta3",
