--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -6,14 +6,14 @@
     "require": {
         "php": ">=7.1",
         "acquia/blt": "11.x-dev",
+        "acquia/composer-scaffold": "dev-master",
         "acquia/drupal-spec-tool": "*",
-        "acquia/lightning": "4.x-dev",
+        "acquia/lightning": "dev-8.x-4.x",
         "acquia/memcache-settings": "*",
         "drupal/acquia_connector": "^1.5.0",
         "drupal/acquia_purge": "^1.0-beta3",
         "drupal/cog": "^1.0.0",
         "drupal/config_split": "^1.0.0",
-        "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-recommended": "^8.8.0",
         "drupal/devel": "^2.0.0",
         "drupal/features": "^3.8.0",
