--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ env:
     # ORCA configuration.
     - ORCA_SUT_NAME=acquia/blt
     - ORCA_SUT_BRANCH=10.x
-    - ORCA_VERSION=develop
+    - ORCA_VERSION=master
     # Custom configuration.
     - COMPOSER_BIN=$TRAVIS_BUILD_DIR/vendor/bin
     - BLT_DIR=$TRAVIS_BUILD_DIR
@@ -57,7 +57,9 @@ before_install:
   - cp -r subtree-splits/blt-project /tmp/
   - composer config --global repositories.blt path /tmp/blt-project
   # Install ORCA.
+  # TODO: Convert to composer create-project after we remove patch, and change ORCA_VERSION to dev-master
   - git clone --branch ${ORCA_VERSION} --depth 1 https://github.com/acquia/orca.git ../orca
+  - curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/53.patch | git -C ../orca apply
   - ../orca/bin/travis/before_install.sh
 
 install:
