--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL-2.0-only",
     "require": {
         "php": ">=7.2",
-        "acquia/blt": "11.x-dev",
+        "acquia/blt": "^11.1.0",
         "acquia/composer-scaffold": "dev-master",
         "acquia/drupal-spec-tool": "*",
         "acquia/lightning": "dev-8.x-4.x",
