--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ env:
     - COMPOSER_BIN=$TRAVIS_BUILD_DIR/vendor/bin
     - BLT_DIR=$TRAVIS_BUILD_DIR
     - DRUPAL_CORE_HEAD=8.8.x-dev
-    - BLT_PRINT_COMMAND_OUTPUT=0
+    # Change to 1 to debug failed tests.
+    - BLT_PRINT_COMMAND_OUTPUT=1
 
 jobs:
   fast_finish: true
