--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/common": "^2.5",
         "drupal/coder": "^8.3.1",
-        "drupal/core": "^8.5.0",
+        "drupal/core": "^8.7.0",
         "drupol/phposinfo": "^1.6",
         "drush/drush": "^9.5.0 || ^10.0.1",
         "grasmash/drupal-security-warning": "^1.0.0",
@@ -55,7 +55,7 @@
         "drupal/core-dev": "^8.8.0",
         "knplabs/github-api": "^2.6",
         "php-http/guzzle6-adapter": "^1.1",
-        "phpunit/phpunit": "^4.8 || ^6.5",
+        "phpunit/phpunit": "^4.8.35 || ^6.5 || ^7",
         "squizlabs/php_codesniffer": "^3.0.1"
     },
     "suggest": {
