--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ env:
     - COMPOSER_BIN=$TRAVIS_BUILD_DIR/vendor/bin
     - BLT_DIR=$TRAVIS_BUILD_DIR
     - DRUPAL_CORE_HEAD=8.8.x-dev
+    # Change to 1 to debug failed tests.
     - BLT_PRINT_COMMAND_OUTPUT=0
 
 jobs:
