--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "doctrine/inflector": "~1.1.0",
         "drupal-composer/drupal-scaffold": "^2.5.4",
         "drupal/coder": "^8.3.1",
-        "drupal/core": "^8.5.0",
+        "drupal/core": "^8.7.0",
         "drupol/phposinfo": "^1.6",
         "drush/drush": "^9.5.0",
         "grasmash/drupal-security-warning": "^1.0.0",
@@ -56,7 +56,7 @@
         "composer/composer": "^1.6.4",
         "knplabs/github-api": "^2.6",
         "php-http/guzzle6-adapter": "^1.1",
-        "phpunit/phpunit": "^4.8 || ^6.5",
+        "phpunit/phpunit": "^4.8.35 || ^6.5 || ^7",
         "squizlabs/php_codesniffer": "^3.0.1",
         "webflo/drupal-core-require-dev": "^8.6.0"
     },
